--- a/src/main/resources/ucf/assignments/hello-view.fxml
+++ b/src/main/resources/ucf/assignments/hello-view.fxml
@@ -20,51 +20,28 @@
       </MenuBar>
       <HBox layoutX="14.0" layoutY="33.0" prefHeight="381.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="30.0">
          <children>
-            <VBox prefHeight="400.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+            <VBox HBox.hgrow="ALWAYS">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Stored To-Do Lists" />
-                  <ScrollPane prefHeight="368.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                     <content>
-                        <ListView fx:id="ToDoLists" />
-                     </content>
-                  </ScrollPane>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="To-Do List" />
                   <Separator prefWidth="200.0" />
-               </children>
-            </VBox>
-            <Separator halignment="RIGHT" orientation="VERTICAL" prefHeight="200.0" />
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="400.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Selected To-Do List" />
-                  <ScrollPane prefHeight="368.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                     <content>
-                        <ListView fx:id="ItemLists" />
-                     </content>
-                  </ScrollPane>
-                  <Separator prefWidth="200.0" />
+                  <TableView fx:id="table" fixedCellSize="0.0" prefWidth="500.0">
+                    <columns>
+                      <TableColumn fx:id="description" editable="false" prefWidth="300.0" text="Item Description" />
+                      <TableColumn fx:id="date" editable="false" prefWidth="100.0" text="Due Date" />
+                        <TableColumn fx:id="completion" editable="false" prefWidth="100.0" text="Complete" />
+                    </columns>
+                  </TableView>
                </children>
             </VBox>
             <Separator orientation="VERTICAL" prefHeight="200.0" />
-            <VBox prefHeight="400.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+            <VBox HBox.hgrow="ALWAYS">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add Remove or Edit a To-Do List and its items" VBox.vgrow="ALWAYS" />
-                  <HBox prefHeight="27.0" prefWidth="242.0">
-                     <children>
-                        <TextField promptText="Title of a To-Do List" HBox.hgrow="ALWAYS" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="29.0" prefWidth="242.0">
-                     <children>
-                        <Button mnemonicParsing="false" text="Add List" HBox.hgrow="ALWAYS" />
-                        <Button mnemonicParsing="false" text="Remove List" HBox.hgrow="ALWAYS" />
-                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Update Title" />
-                     </children>
-                  </HBox>
-                  <Separator prefWidth="200.0" />
                   <VBox prefHeight="53.0" prefWidth="242.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Items" VBox.vgrow="ALWAYS" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Item" VBox.vgrow="ALWAYS" />
                         <TextField promptText="Item Description" />
-                        <HBox alignment="CENTER" layoutX="10.0" layoutY="61.0" prefHeight="100.0" prefWidth="200.0">
+                        <Separator prefWidth="200.0" />
+                        <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="61.0" prefHeight="100.0" prefWidth="200.0">
                            <children>
                               <DatePicker />
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Due Date">
@@ -74,32 +51,29 @@
                               </Text>
                            </children>
                         </HBox>
-                        <HBox prefHeight="100.0" prefWidth="200.0">
+                        <Separator prefWidth="200.0" />
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <CheckBox mnemonicParsing="false" text="Completed" />
+                              <CheckBox mnemonicParsing="false" text="Completed" textAlignment="CENTER" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
                      </children></VBox>
                   <HBox alignment="CENTER" layoutX="10.0" layoutY="37.0" prefHeight="29.0" prefWidth="242.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Add Item" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="addItem" mnemonicParsing="false" text="Add Item" HBox.hgrow="ALWAYS" />
                         <Button mnemonicParsing="false" text="Remove Item" HBox.hgrow="ALWAYS" />
                         <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Update Item" />
                      </children>
                   </HBox>
                   <Separator layoutX="10.0" layoutY="67.0" prefHeight="9.0" prefWidth="242.0" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Item Displays" />
-                  <HBox alignment="CENTER" layoutX="10.0" layoutY="140.0" prefHeight="29.0" prefWidth="242.0">
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Show Incomplete" HBox.hgrow="ALWAYS">
-                           <HBox.margin>
-                              <Insets />
-                           </HBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" text="Show Complete" HBox.hgrow="ALWAYS" />
-                        <Button layoutX="184.0" layoutY="12.0" mnemonicParsing="false" text="Sort By Due Date" />
+                        <Button mnemonicParsing="false" text="Show Incomplete" />
+                        <Button mnemonicParsing="false" text="Sort By Due Date" />
+                        <Button mnemonicParsing="false" text="Show Complete" />
                      </children>
-                  </HBox>
+                  </VBox>
                </children>
             </VBox>
          </children>
