--- a/src/main/resources/ucf/assignments/hello-view.fxml
+++ b/src/main/resources/ucf/assignments/hello-view.fxml
@@ -11,9 +11,8 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Save Selected List" />
-                  <MenuItem mnemonicParsing="false" text="Save All Lists" />
-                  <MenuItem mnemonicParsing="false" text="Load Lists" />
+              <MenuItem fx:id="saveButton" mnemonicParsing="false" onAction="#saveButtonClick" text="Save List" />
+                  <MenuItem fx:id="loadButton" mnemonicParsing="false" onAction="#loadButtonClick" text="Load List" />
             </items>
           </Menu>
         </menus>
